# lv-explorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lv_explorer.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: README.md  human_bust.mtl
config/: requirements.txt  setup.py
docs/: installation.md
hooks/: hook-lv_explorer.py
lv_explorer/: __init__.py  run.py  utils.py
lv_explorer/core/: __init__.py  dashboard_manager.py  data_manager.py  orientation_widget.py  visualization_manager.py
lv_explorer/metrics/: __init__.py  metrics_catalog.py
lv_explorer/ui/: __init__.py  combined_score_dialog.py  main_window.py
scripts/: build_exe.bat
tests/: __init__.py
