[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lv-explorer"
version = "0.1.0a1"
description = "Interactive 3D ventricular topography analysis and VT substrate visualization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["cardiology", "ventricular", "VTK", "PyVista", "medical imaging", "VT ablation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyvista>=0.43.0",
    "pyvistaqt>=0.11.0",
    "qtpy>=2.0.0",
    "PyQt5>=5.15.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "ruff>=0.3.0",
]

[project.scripts]
lv-explorer = "lv_explorer.run:main"

[project.urls]
Homepage = "https://github.com/antoinealxandre/lv-explorer"
Repository = "https://github.com/antoinealxandre/lv-explorer"
"Bug Tracker" = "https://github.com/antoinealxandre/lv-explorer/issues"
Changelog = "https://github.com/antoinealxandre/lv-explorer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["lv_explorer*"]

[tool.setuptools.package-data]
"*" = ["assets/**"]

# ---------------------------------------------------------------------------
# Ruff (linter/formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
